# comp0252-proj

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SPECIFICATION.md  proj_notes.md
.github/workflows/: ci.yml
bench/: bench_bloom_filter.cpp
data/: breached_passwords.txt  hibp-100k.txt  hibp-1k.txt
docs/: Doxyfile  api.rst  conf.py  index.rst  requirements.txt
include/: bloom_filter.h  bloom_filter_stash.h  experiment_utils.h  linear_probing_stash.h  partitioned_bloom_filter.h  prob_bool.h  stash_set.h  stashed_bloom_filter.h
scripts/: plot.py  plot_frequency_distribution.py  run_experiments.sh
src/: bloom_filter.cpp  main.cpp
tests/: test_bloom_filter.cpp
